Don't filter out inactive subscriptions by default